--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,8 @@
 *.userosscache
 *.sln.docstates
 
-.database/
 .docs/
+database/
 packages/
 web.config
 
@@ -366,3 +366,4 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/src/PKWeb/event/power
